# scraping-recon

./: .gitignore  CLAUDE.md  Makefile  README.md  config.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.playwright-mcp/: page-2026-04-28T00-21-24-127Z.yml
docs/: BACKLOG.md  T2_false_negative_log.csv
docs/.sdd/: Phase_2_E2-E6_Design.md  Phase_2_Proposal.md  Phase_2_Tasks.md  Phase_3_E7_Deep_Mode_Design.md  Phase_3_E7_Deep_Mode_Tasks.md
docs/modules/: recommender_logic.md
models/: schemas.py
modules/: antibot.py  api_detector.py  auth_detector.py  classifier.py  legal.py  pagination.py  recommender.py
report/: json_export.py  terminal.py
scripts/: csv_to_fixture.py
tests/: conftest.py
tests/integration/: test_antibot_behavioral.py  test_antibot_extra.py  test_antibot_http.py  test_antibot_vendors.py  test_api_detector_http.py  test_auth_http.py  test_classifier_http.py  test_e7_helpers.py  test_e7_pipeline.py  test_http_extra.py  test_legal_extra.py  test_legal_http.py  test_pagination_extra.py  test_pagination_http.py
tests/real/: conftest.py  test_books_toscrape.py  test_buscalibre.py  test_custom_spa.py  test_mercadolibre.py  test_regional_br.py  test_shopify.py  test_woocommerce.py
tests/smoke/: test_antibot_vendors.py  test_pipeline_smoke.py
tests/unit/: test_antibot_b2_b7.py  test_antibot_extra.py  test_antibot_pure.py  test_antibot_vendors.py  test_api_detector_search_api.py  test_auth_pure.py  test_classifier_extra.py  test_classifier_inventory.py  (+11 more)
utils/: graceful.py  http.py  playwright_helper.py  tls_test.py
(+22 files in other folders)
