[project]
name = "scraping-recon"
version = "0.1.0"
requires-python = ">=3.12"
# Dependencies live in requirements.txt (runtime, pinned) and
# requirements-dev.txt (dev) — the single source of truth for this project.

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"
markers = [
    "smoke: full pipeline smoke tests",
    "real: integration tests against real URLs (requires network)",
]

[tool.coverage.run]
omit = [
    "main.py",
    "report/terminal.py",
    "utils/tls_test.py",
    "venv/*",
    "tests/*",
]

[tool.coverage.report]
# Floor / guardrail — flags accidental coverage gaps, not a target to pad toward.
fail_under = 75
